# attestation-photo-mobile

./: .gitignore  .npmrc  .releaserc.json  CHANGELOG.md  LICENSE  Makefile  README.md  RNAttestationMobile.podspec  eslint.config.mjs  package-lock.json  package.json  react-native.config.js  tsconfig.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
docs/: ARCHITECTURE.md  ROADMAP.md
example/: App.tsx  index.js  metro.config.js  package-lock.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/attestation/example/: MainActivity.kt  MainApplication.kt
example/ios/: Podfile
example/ios/AttestationExample/: AppDelegate.swift  Info.plist
example/ios/AttestationExample.xcodeproj/: project.pbxproj
example/src/: AttestedCamera.tsx  CameraControls.tsx  types.ts  useCameraControls.ts
native/android/: RNAttestationMobileModule.kt  build.gradle
native/android/src/main/java/com/attestation/mobile/: RNAttestationMobileModule.kt  RNAttestationMobilePackage.kt
native/android/src/main/java/uniffi/attestation_mobile/: attestation_mobile.kt
native/ios/: RNAttestationMobile.swift  RNAttestationMobileBridge.m  attestation_mobile.swift  attestation_mobileFFI.h  attestation_mobileFFI.modulemap
rust/: Cargo.toml  build.rs
rust/src/: attestation_mobile.udl  lib.rs
scripts/: build-rust-android.sh  build-rust-ios.sh
src/: AttestedCamera.tsx  index.ts  nativeBridge.ts  types.ts  useAttestedCapture.ts
