[package]
name = "attestation_mobile_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1"
c2pa = { version = "0.72", default-features = false, features = ["rust_native_crypto"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
